# rldb

./: .gitignore  Cargo.toml  LICENSE  README.md  local_jaeger.sh
.github/: codecov.yaml
.github/workflows/: check.yml  test.yml
conf/: README.md  cluster_node_1.json  cluster_node_2.json  cluster_node_3.json  node_1.json  node_2.json  node_3.json  standalone.json
docs/blog_series/part_0.intro/: post.md
docs/blog_series/part_1.tcp.server/: post.md
docs/blog_series/part_9.rebalancing/: post.md
src/: lib.rs
src/client/: README.md  db_client.rs  error.rs  mock.rs  mod.rs
src/cluster/: README.md  consistent_hashing.rs  error.rs  gossip.rs  heartbeat.rs  mod.rs  partitioning.rs  ring_state.rs  state.rs
src/cluster/partitioning/: consistent_hashing.rs  mock.rs  mod.rs
src/cluster/quorum/: min_required_replicas.rs  mod.rs
src/cmd/: README.md  get.rs  mod.rs  ping.rs  put.rs  replication_get.rs  types.rs
src/cmd/cluster/: add_node.rs  cluster_state.rs  heartbeat.rs  join_cluster.rs  mod.rs  remove_node.rs
src/db/: mod.rs
src/db/versioning/: mod.rs  version_vector.rs
src/error/: mod.rs
src/persistency/: mod.rs
src/persistency/partitioning/: consistent_hashing.rs  mock.rs  mod.rs
src/persistency/quorum/: min_required_replicas.rs  mod.rs
src/persistency/rebalancing/: mod.rs
src/persistency/storage/: mod.rs
src/persistency/storage_engine/: in_memory.rs  mod.rs
src/persistency/versioning/: mod.rs  version_vector.rs
src/server/: README.md  config.rs  message.rs  mod.rs
src/storage_engine/: README.md  in_memory.rs  mod.rs
src/telemetry/: mod.rs
src/test_utils/: fault.rs
src/utils/: mod.rs  serde_hex_bytes.rs  serde_utf8_bytes.rs  serde_vec_utf8_bytes.rs
tests/: cluster.rs  e2e.rs  standalone.rs
tests/conf/: test_cluster_node_1.json  test_cluster_node_2.json  test_cluster_node_3.json  test_node_3.json  test_node_config.json  test_standalone.json
