[package]
name = "rldb"
version = "0.1.8"
edition = "2021"
description = "A dynamo-like key/value database written in rust"
authors = ["Rafael Leite"]
readme = "README.md"
homepage = "https://github.com/rcmgleite/rldb"
keywords = ["storage-engine", "dynamodb", "distributed-systems", "gossip-protocol", "consistent-hashing"]
repository = "https://github.com/rcmgleite/rldb"
documentation = "https://docs.rs/rldb"
license = "MIT"

[[bin]]
name = "rldb-server"
path = "src/bin/db_server.rs"

[[bin]]
name = "rldb-client"
path = "src/bin/db_client.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.6"
clap = {version = "4.5", features = ["derive"]}
futures = "0.3.30"
hex = "0.4"
local-ip-address = "0.6.1"
murmur3 = "0.5.2"
quickcheck = "1.0.3"
quickcheck_async = "0.1.1"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.35", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
