[package]
name = "rldb"
version = "0.1.13"
edition = "2021"
description = "A dynamo-like key/value database written in rust"
authors = ["Rafael Leite"]
readme = "README.md"
homepage = "https://github.com/rcmgleite/rldb"
keywords = ["storage-engine", "dynamodb", "distributed-systems", "gossip-protocol", "consistent-hashing"]
repository = "https://github.com/rcmgleite/rldb"
documentation = "https://docs.rs/rldb"
license = "MIT"

[[bin]]
name = "rldb-server"
path = "src/bin/db_server.rs"

[[bin]]
name = "rldb-client"
path = "src/bin/db_client.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.6"
clap = {version = "4.5", features = ["derive"]}
crc32c = "0.6.8"
futures = "0.3.30"
hex = "0.4"
local-ip-address = "0.6.1"
murmur3 = "0.5.2"
opentelemetry = { version = "0.19.0", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.12.0", features = ["reqwest-client", "reqwest-rustls", "http-proto"] }
opentelemetry-semantic-conventions = "0.11.0"
reqwest = {version = "0.11.18", features = ["json"] }
quickcheck = "1.0.3"
quickcheck_async = "0.1.1"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.35", features = ["full"]}
tracing = "0.1.36"
tracing-bunyan-formatter = "0.3.3"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = "0.26.3"
strum_macros = "0.26.4"
